# Boids

./: .gitignore  LEARN.md  README.md  batch.py  imgui.ini  pyproject.toml
src/boids/: __main__.py  boids.py  constants.py  debug.py  entities.py  graphics.py  kdtree.py  rules.py  settings.py  spatialgrid.py  utils.py
src/boids/settings/: blueprint.py  schema.py  settings.py  spec.py
src/boids/tests/: test_kdtree.py
